<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <TextView
        android:id="@+id/postText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/post_text"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:contentDescription="TODO"
        android:scaleType="centerCrop"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/postText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/postImage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/likeButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like_button_text" />

        <Button
            android:id="@+id/commentButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_button_text"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
