<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="12dp"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/avatar_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        android:background="@drawable/avatar_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp" />

    <TextView
        android:id="@+id/userNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickName"
        android:textColor="#888888"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="@+id/userName" />

    <Button
        android:id="@+id/followButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Подписаться"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/messageButton"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp" />

    <Button
        android:id="@+id/messageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Написать сообщение"
        app:layout_constraintTop_toTopOf="@+id/followButton"
        app:layout_constraintStart_toEndOf="@+id/followButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="4dp" />

    <LinearLayout
        android:id="@+id/statsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/followButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/followersCount"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/followers_count" />

        <TextView
            android:id="@+id/followingCount"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/following_count" />

        <TextView
            android:id="@+id/postsCount"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/posts_count" />
    </LinearLayout>

    <!-- RecyclerView для постов -->

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="39dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statsContainer"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/postsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clipToPadding="false"
            android:textAlignment="center" />
    </androidx.core.widget.NestedScrollView>

    <!--    <androidx.recyclerview.widget.RecyclerView
    android: id="@+id/recycler_view"
    android: layout_width="match_parent"
    android: layout_height="wrap_content"
    app: layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app: layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/header_name™ /›
    androidx.core.widget.NestedScrollView>-->

</androidx.constraintlayout.widget.ConstraintLayout>
